--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <i class="fas fa-rocket text-4xl text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 to-purple-500"></i>
                     <div>
                         <h1 class="brand-font text-xl sm:text-2xl font-bold text-gray-800 dark:text-white">SUVOJEET</h1>
-                        <p class="text-xs text-gray-500 dark:text-gray-400 -mt-1">AI News Archive</p>
+                        <p class="text-xs text-gray-500 dark:text-gray-400 -mt-1">Automated  News Archive</p>
                     </div>
                 </div>
                 <div class="flex items-center space-x-4">
