--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div id="app-wrapper">
         <!-- Header -->
-        <header class="bg-white/80 dark:bg-gray-800/80 backdrop-blur-lg shadow-lg sticky top-0 z-40">
+        <header class="bg-white dark:bg-gray-900 shadow-lg sticky top-0 z-40">
             <div class="container mx-auto px-4 sm:px-6 lg:px-8 h-20 flex items-center justify-between">
                 <div class="flex items-center space-x-3 sm:space-x-4">
                     <i class="fas fa-rocket text-3xl sm:text-4xl text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 to-purple-500"></i>
@@ -57,7 +57,7 @@
         </header>
 
         <!-- Search Bar -->
-        <div class="bg-gray-100 dark:bg-gray-900 sticky top-20 z-30 py-4 px-4 shadow-md">
+        <div class="bg-white dark:bg-gray-900 sticky top-20 z-30 py-4 px-4 shadow-md">
             <div class="container mx-auto relative">
                 <span class="absolute inset-y-0 left-0 flex items-center pl-3"><i class="fas fa-search text-gray-400"></i></span>
                 <input type="text" id="search-input" placeholder="Search in news archive..." class="w-full pl-10 pr-4 py-2 border border-gray-300 dark:border-gray-600 rounded-full bg-white dark:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-indigo-500">
@@ -84,7 +84,7 @@
     
     <!-- Article Reader Modal -->
     <div id="article-modal" class="hidden fixed inset-0 bg-black bg-opacity-70 backdrop-blur-sm z-50 flex items-center justify-center p-4">
-        <div class="modal-content bg-white dark:bg-gray-800 rounded-xl shadow-2xl w-full max-w-4xl h-full max-h-[90vh] flex flex-col transform scale-95">
+        <div class="modal-content bg-white dark:bg-gray-900 rounded-xl shadow-2xl w-full max-w-4xl h-full max-h-[90vh] flex flex-col transform scale-95 border border-gray-200 dark:border-gray-700">
             <!-- Modal Header -->
             <div class="flex justify-between items-center p-4 border-b border-gray-200 dark:border-gray-700">
                 <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200" id="modal-source">Source Name</h2>
@@ -168,7 +168,7 @@
             mainContent.innerHTML = Object.keys(grouped).sort((a, b) => new Date(b) - new Date(a)).map(date => {
                 const dateLabel = new Date(date).toLocaleDateString('en-US', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
                 const articlesHtml = grouped[date].map((article, index) => `
-                    <div class="article-card bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden transition-transform duration-300 hover:scale-105 fade-in cursor-pointer" data-url="${article.url}">
+                    <div class="article-card bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden transition-all duration-300 hover:shadow-xl hover:-translate-y-1 border border-gray-200 dark:border-gray-700 cursor-pointer" data-url="${article.url}">
                         <img src="${article.urlToImage}" alt="Article" class="w-full h-40 object-cover" loading="lazy" onerror="this.src='https://placehold.co/600x400/374151/E5E7EB?text=No+Image'">
                         <div class="p-4 flex flex-col flex-grow">
                             <span class="text-xs font-semibold text-indigo-500 dark:text-indigo-400 mb-2">${article.source.name || 'Unknown'}</span>
@@ -195,7 +195,7 @@
 
         // --- Initial Data Fetch ---
         const fetchNews = async () => {
-            mainContent.innerHTML = `<div class="text-center py-10"><i class="fas fa-spinner fa-spin fa-3x text-indigo-500"></i></div>`;
+            mainContent.innerHTML = `<div class="text-center py-10 text-gray-500 dark:text-gray-400"><i class="fas fa-spinner fa-spin fa-3x text-indigo-500 mb-4"></i><p>Loading news...</p></div>`;
             try {
                 const response = await fetch(`./news.json?v=${new Date().getTime()}`);
                 if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
@@ -206,7 +206,7 @@
                 displayGroupedNews(allArticles);
             } catch (error) {
                 console.error("Error fetching news:", error);
-                mainContent.innerHTML = `<div class="text-center p-6 bg-red-100 dark:bg-red-900/50 rounded-lg"><p class="font-bold text-red-700 dark:text-red-300">Oops! Could not load news.</p></div>`;
+                mainContent.innerHTML = `<div class="text-center p-6 bg-red-100 dark:bg-red-900/50 rounded-lg"><p class="font-bold text-red-700 dark:text-red-300">Oops! Could not load news.</p><p class="text-gray-600 dark:text-gray-400 mt-2">Please check your internet connection or try again later.</p></div>`;
             }
         };
 
