--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Orbitron:wght@700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Inter', sans-serif; transition: background-color 0.3s, color 0.3s; scroll-behavior: smooth; }
+        body { font-family: 'Inter', sans-serif; transition: background-color 0.3s, color 0.3s; scroll-behavior: smooth; min-height: 100vh; display: flex; flex-direction: column; }
         .brand-font { font-family: 'Orbitron', sans-serif; }
         @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
         .fade-in { animation: fadeIn 0.5s ease-out forwards; }
@@ -29,11 +29,11 @@
         html.dark ::-webkit-scrollbar-thumb:hover { background: #718096; }
     </style>
 </head>
-<body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
+<body class="bg-gray-50 dark:bg-gray-950 text-gray-900 dark:text-gray-100">
 
     <div id="app-wrapper">
         <!-- Header -->
-        <header class="bg-white dark:bg-gray-900 shadow-lg sticky top-0 z-40">
+        <header class="bg-white dark:bg-gray-900 shadow-sm sticky top-0 z-40 border-b border-gray-200 dark:border-gray-800">
             <div class="container mx-auto px-4 sm:px-6 lg:px-8 h-20 flex items-center justify-between">
                 <div class="flex items-center space-x-3 sm:space-x-4">
                     <i class="fas fa-rocket text-3xl sm:text-4xl text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 to-purple-500"></i>
@@ -49,18 +49,18 @@
                     </div>
                     <div class="flex items-center space-x-2">
                          <i class="fas fa-sun text-yellow-500"></i>
-                         <label for="dark-mode-toggle" class="relative inline-flex items-center cursor-pointer"><input type="checkbox" id="dark-mode-toggle" class="sr-only peer"><div class="w-11 h-6 bg-gray-300 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-indigo-600"></div></label>
-                         <i class="fas fa-moon text-indigo-300"></i>
+                         <label for="dark-mode-toggle" class="relative inline-flex items-center cursor-pointer"><input type="checkbox" id="dark-mode-toggle" class="sr-only peer"><div class="w-11 h-6 bg-gray-300 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-indigo-500"></div></label>
+                         <i class="fas fa-moon text-indigo-400"></i>
                     </div>
                 </div>
             </div>
         </header>
 
         <!-- Search Bar -->
-        <div class="bg-white dark:bg-gray-900 sticky top-20 z-30 py-4 px-4 shadow-md">
+        <div class="bg-white dark:bg-gray-900 sticky top-20 z-30 py-4 px-4 shadow-sm border-b border-gray-200 dark:border-gray-800">
             <div class="container mx-auto relative">
                 <span class="absolute inset-y-0 left-0 flex items-center pl-3"><i class="fas fa-search text-gray-400"></i></span>
-                <input type="text" id="search-input" placeholder="Search in news archive..." class="w-full pl-10 pr-4 py-2 border border-gray-300 dark:border-gray-600 rounded-full bg-white dark:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-indigo-500">
+                <input type="text" id="search-input" placeholder="Search in news archive..." class="w-full pl-10 pr-4 py-2 border border-gray-300 dark:border-gray-600 rounded-full bg-white dark:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
             </div>
         </div>
 
@@ -84,15 +84,15 @@
     
     <!-- Article Reader Modal -->
     <div id="article-modal" class="hidden fixed inset-0 bg-black bg-opacity-70 backdrop-blur-sm z-50 flex items-center justify-center p-4">
-        <div class="modal-content bg-white dark:bg-gray-900 rounded-xl shadow-2xl w-full max-w-4xl h-full max-h-[90vh] flex flex-col transform scale-95 border border-gray-200 dark:border-gray-700">
+        <div class="modal-content bg-white dark:bg-gray-900 rounded-xl shadow-2xl w-full max-w-4xl h-full max-h-[90vh] flex flex-col transform scale-95 border border-gray-100 dark:border-gray-800">
             <!-- Modal Header -->
             <div class="flex justify-between items-center p-4 border-b border-gray-200 dark:border-gray-700">
                 <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200" id="modal-source">Source Name</h2>
-                <button id="close-modal" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">&times;</button>
+                <button id="close-modal" class="text-gray-500 hover:text-gray-900 dark:hover:text-white text-2xl leading-none">&times;</button>
             </div>
             <!-- Modal Body -->
             <div class="flex-grow overflow-y-auto p-6">
-                <img id="modal-img" src="" alt="Article Image" class="w-full h-64 object-cover rounded-lg mb-4">
+                <img id="modal-img" src="" alt="Article Image" class="w-full h-64 object-cover rounded-lg mb-4 border border-gray-200 dark:border-gray-700">
                 <h1 id="modal-title" class="text-3xl font-extrabold mb-2 text-gray-900 dark:text-white">Article Title</h1>
                 <p id="modal-date" class="text-sm text-gray-500 dark:text-gray-400 mb-6">Published Date</p>
                 <div id="modal-description" class="text-gray-700 dark:text-gray-300 space-y-4">
@@ -101,7 +101,7 @@
             </div>
             <!-- Modal Footer -->
             <div class="p-4 border-t border-gray-200 dark:border-gray-700 text-center">
-                <a id="modal-read-more" href="#" target="_blank" rel="noopener noreferrer" class="inline-block bg-indigo-600 text-white font-bold py-2 px-6 rounded-full hover:bg-indigo-700 transition-colors">Read Full Story on Original Site</a>
+                <a id="modal-read-more" href="#" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center bg-indigo-600 text-white font-bold py-3 px-8 rounded-full hover:bg-indigo-700 transition-colors shadow-lg"><i class="fas fa-external-link-alt mr-2"></i> Read Full Story on Original Site</a>
             </div>
         </div>
     </div>
@@ -169,7 +169,7 @@
                 const dateLabel = new Date(date).toLocaleDateString('en-US', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
                 const articlesHtml = grouped[date].map((article, index) => `
                     <div class="article-card bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden transition-all duration-300 hover:shadow-xl hover:-translate-y-1 border border-gray-200 dark:border-gray-700 cursor-pointer" data-url="${article.url}">
-                        <img src="${article.urlToImage}" alt="Article" class="w-full h-40 object-cover" loading="lazy" onerror="this.src='https://placehold.co/600x400/374151/E5E7EB?text=No+Image'">
+                        <img src="${article.urlToImage}" alt="Article" class="w-full h-40 object-cover" loading="lazy" onerror="this.src='https://via.placeholder.com/600x400/F3F4F6/6B7280?text=No+Image'">
                         <div class="p-4 flex flex-col flex-grow">
                             <span class="text-xs font-semibold text-indigo-500 dark:text-indigo-400 mb-2">${article.source.name || 'Unknown'}</span>
                             <h3 class="text-md font-bold flex-grow">${article.title}</h3>
