--- a/index.html
+++ b/index.html
@@ -67,12 +67,51 @@
         <!-- Main Content -->
         <main id="main-content" class="container mx-auto px-4 sm:px-6 lg:px-8 py-8">
             <!-- News will be injected here -->
+            <div id="skeleton-loader" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
+                <!-- Skeleton Card 1 -->
+                <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden border border-gray-200 dark:border-gray-700 animate-pulse">
+                    <div class="w-full h-40 bg-gray-300 dark:bg-gray-700"></div>
+                    <div class="p-4">
+                        <div class="h-4 bg-gray-300 dark:bg-gray-700 rounded w-3/4 mb-2"></div>
+                        <div class="h-4 bg-gray-300 dark:bg-gray-700 rounded"></div>
+                        <div class="h-3 bg-gray-300 dark:bg-gray-700 rounded w-1/2 mt-3"></div>
+                    </div>
+                </div>
+                <!-- Skeleton Card 2 -->
+                <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden border border-gray-200 dark:border-gray-700 animate-pulse">
+                    <div class="w-full h-40 bg-gray-300 dark:bg-gray-700"></div>
+                    <div class="p-4">
+                        <div class="h-4 bg-gray-300 dark:bg-gray-700 rounded w-3/4 mb-2"></div>
+                        <div class="h-4 bg-gray-300 dark:bg-gray-700 rounded"></div>
+                        <div class="h-3 bg-gray-300 dark:bg-gray-700 rounded w-1/2 mt-3"></div>
+                    </div>
+                </div>
+                <!-- Skeleton Card 3 -->
+                <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden border border-gray-200 dark:border-gray-700 animate-pulse">
+                    <div class="w-full h-40 bg-gray-300 dark:bg-gray-700"></div>
+                    <div class="p-4">
+                        <div class="h-4 bg-gray-300 dark:bg-gray-700 rounded w-3/4 mb-2"></div>
+                        <div class="h-4 bg-gray-300 dark:bg-gray-700 rounded"></div>
+                        <div class="h-3 bg-gray-300 dark:bg-gray-700 rounded w-1/2 mt-3"></div>
+                    </div>
+                </div>
+                <!-- Skeleton Card 4 -->
+                <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden border border-gray-200 dark:border-gray-700 animate-pulse">
+                    <div class="w-full h-40 bg-gray-300 dark:bg-gray-700"></div>
+                    <div class="p-4">
+                        <div class="h-4 bg-gray-300 dark:bg-gray-700 rounded w-3/4 mb-2"></div>
+                        <div class="h-4 bg-gray-300 dark:bg-gray-700 rounded"></div>
+                        <div class="h-3 bg-gray-300 dark:bg-gray-700 rounded w-1/2 mt-3"></div>
+                    </div>
+                </div>
+            </div>
         </main>
         
         <!-- Footer -->
-        <footer class="bg-white dark:bg-gray-800 mt-16 py-6 border-t border-gray-200 dark:border-gray-700">
-            <div class="container mx-auto px-4 text-center text-gray-500 dark:text-gray-400">
+        <footer class="bg-white dark:bg-gray-900 mt-16 py-8 border-t border-gray-200 dark:border-gray-800">
+            <div class="container mx-auto px-4 text-center text-gray-600 dark:text-gray-400">
                 <p>&copy; <span id="year"></span> Automated News Hub by Suvojeet. All Rights Reserved.</p>
+                <p class="text-sm mt-2">Powered by AI & Passion</p>
             </div>
         </footer>
     </div>
@@ -115,6 +154,7 @@
         const modal = document.getElementById('article-modal');
         const closeModalButton = document.getElementById('close-modal');
         const html = document.documentElement;
+        const skeletonLoader = document.getElementById('skeleton-loader');
         
         let allArticles = []; // Cache all articles for search and modal
 
@@ -158,6 +198,15 @@
 
         // --- News Display Logic ---
         const displayGroupedNews = (articles) => {
+            if (articles.length === 0) {
+                mainContent.innerHTML = `<div class="text-center py-10 text-gray-500 dark:text-gray-400">
+                    <i class="fas fa-box-open fa-4x mb-4"></i>
+                    <p class="text-xl font-semibold">No results found.</p>
+                    <p class="mt-2">Try adjusting your search or filters.</p>
+                </div>`;
+                return;
+            }
+
             const grouped = articles.reduce((acc, article) => {
                 const date = new Date(article.publishedAt).toLocaleDateString('en-CA');
                 if (!acc[date]) acc[date] = [];
@@ -195,7 +244,8 @@
 
         // --- Initial Data Fetch ---
         const fetchNews = async () => {
-            mainContent.innerHTML = `<div class="text-center py-10 text-gray-500 dark:text-gray-400"><i class="fas fa-spinner fa-spin fa-3x text-indigo-500 mb-4"></i><p>Loading news...</p></div>`;
+            skeletonLoader.classList.remove('hidden'); // Show skeleton
+            mainContent.innerHTML = ''; // Clear previous content
             try {
                 const response = await fetch(`./news.json?v=${new Date().getTime()}`);
                 if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
@@ -207,6 +257,8 @@
             } catch (error) {
                 console.error("Error fetching news:", error);
                 mainContent.innerHTML = `<div class="text-center p-6 bg-red-100 dark:bg-red-900/50 rounded-lg"><p class="font-bold text-red-700 dark:text-red-300">Oops! Could not load news.</p><p class="text-gray-600 dark:text-gray-400 mt-2">Please check your internet connection or try again later.</p></div>`;
+            } finally {
+                skeletonLoader.classList.add('hidden'); // Hide skeleton
             }
         };
 
